#
# heartbeat: Linux-HA heartbeat code
#
# Copyright (C) 2001 Michael Moerz
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, see <http://www.gnu.org/licenses/>.
#
MAINTAINERCLEANFILES    = Makefile.in

harddir			= $(sysconfdir)/ha.d/resource.d

hard_SCRIPTS	=	IPv6addr	\
			apache		\
			AudibleAlarm	\
			db2		\
			Delay		\
			Filesystem	\
			hto-mapfuncs	\
			ICP		\
			ids		\
			IPaddr		\
			IPaddr2		\
			IPsrcaddr	\
			LinuxSCSI	\
			LVM		\
			MailTo		\
			OCF		\
			portblock	\
			ServeRAID	\
			SendArp		\
			Raid1		\
			WAS		\
			WinPopup	\
			Xinetd
